cmake_minimum_required(VERSION 2.8.12)
project (bzip2 C)
set(PACKAGE "bzip2" CACHE STRING "")

SET(bzip2_lib_SOURCES blocksort.c
		      	  huffman.c
		  	  crctable.c
			  randtable.c
		  	  compress.c
		  	  decompress.c
		  	  bzlib.c)

ADD_LIBRARY(bz2 ${bzip2_lib_SOURCES})


IF(MSVC)
  SET_TARGET_PROPERTIES(bz2 PROPERTIES
  LINK_FLAGS_DEBUG " /NODEFAULTLIB:MSVCRT"
  )
ENDIF()

INSTALL(
 TARGETS bz2 
 LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   COMPONENT libraries
 ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
   COMPONENT libraries
 RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
   COMPONENT libraries
 INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/bzlib.h
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  COMPONENT headers)
