cmake_minimum_required(VERSION 2.8.12)
project (bzip2 C)

INCLUDE(${CMAKE_ROOT}/Modules/CheckLibraryExists.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/CheckIncludeFile.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/CheckTypeSize.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/CheckFunctionExists.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/CheckCXXSourceCompiles.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/CheckCSourceCompiles.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/TestBigEndian.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/CheckSymbolExists.cmake)
INCLUDE(${CMAKE_ROOT}/Modules/GetPrerequisites.cmake)

INCLUDE(CheckCCompilerFlag)

set(PACKAGE "bzip2" CACHE STRING "")

SET(bzip2_lib_SOURCES blocksort.c
		      	  huffman.c
		  	  crctable.c
			  randtable.c
		  	  compress.c
		  	  decompress.c
		  	  bzlib.c)

ADD_LIBRARY(bz2 ${bzip2_lib_SOURCES})


IF(MSVC)
  SET_TARGET_PROPERTIES(bz2 PROPERTIES
  LINK_FLAGS_DEBUG " /NODEFAULTLIB:MSVCRT"
  )
ENDIF()

IF(NOT DEFINED CMAKE_INSTALL_LIBDIR)
 SET(CMAKE_INSTALL_LIBDIR lib)
ENDIF()

IF(NOT DEFINED CMAKE_INSTALL_BINDIR)
 SET(CMAKE_INSTALL_BINDIR bin)
ENDIF()

IF(NOT DEFINED CMAKE_INSTALL_INCLUDEDIR)
 SET(CMAKE_INSTALL_INCLUDEDIR include)
ENDIF()


INSTALL(
 TARGETS bz2
 ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
 RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
 COMPONENT library
 INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

INSTALL(FILES ${CMAKE_SOURCE_DIR}/bzlib.h
  DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
  COMPONENT headers)
